--- a/disney-clone/package.json
+++ b/disney-clone/package.json
@@ -15,6 +15,8 @@
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "embla-carousel-autoplay": "^8.0.0-rc18",
+    "embla-carousel-react": "^8.0.0-rc18",
     "lucide-react": "^0.304.0",
     "next": "14.0.4",
     "next-themes": "^0.2.1",
@@ -22,6 +24,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.49.2",
     "tailwind-merge": "^2.2.0",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
   },
