--- a/disney-clone/package.json
+++ b/disney-clone/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@azure/functions": "^4.1.0",
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
@@ -20,6 +21,7 @@
     "lucide-react": "^0.304.0",
     "next": "14.0.4",
     "next-themes": "^0.2.1",
+    "openai": "^4.24.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.49.2",
